# big-torrent

./: .gitmodules  CMakeLists.txt  README.md
bencode/: CMakeLists.txt
bencode/include/: bencode.h
bencode/src/: bencode.c
bigtorrent/: CMakeLists.txt
bigtorrent/include/: torrent.h  tracker.h  tracker_response.h
bigtorrent/src/: main.cpp  torrent.cpp  tracker.cpp  tracker_response.cpp
src/: main.cpp
utils/: bencode.py
